bk_ida/gccida/c2/gen_highpart
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_highpart/src/emit-rtl.c:1666:20: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  gen_highpart( machine_mode mode, rtx x) 
                   ^
                   enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_highpart/src/emit-rtl.c:1684:42: error: use of undeclared identifier 'machine_mode'
result = simplify_gen_subreg( mode, x, ( machine_mode)v3, v5); 
                                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_highpart/src/obj/emit-rtl.o] Error 1
